navbar modify dolares and reales

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,8 +3,8 @@
         "home": "Home",
         "about": "About Us",
         "contact": "Contact Us",
-        "services": "Services",
-        "howItWorks": "How Works?",
+        "services": "Dolares",
+        "howItWorks": "Reales",
         "contactUs": "Contact Us"
     },
     "header": {
