--- a/locales/es.json
+++ b/locales/es.json
@@ -2,9 +2,9 @@
     "navbar": {
         "home": "Inicio",
         "about": "Nosotros",
-        "services": "Servicios",
+        "services": "Dolares",
         "contact": "Contáctanos",
-        "howItWorks": "¿Como Funciona?",
+        "howItWorks": "Reales",
         "contactUs": "Contáctanos"
     },
     "header": {
