--- a/locales/pt.json
+++ b/locales/pt.json
@@ -3,8 +3,8 @@
         "home": "Início",
         "about": "Sobre Nós",
         "contact": "Contate-Nos",
-        "services": "Services",
-        "howItWorks": "Como funciona?",
+        "services": "Dolares",
+        "howItWorks": "Reais",
         "contactUs": "Contate-Nos"
     },
     "header": {
