--- a/locales/en.json
+++ b/locales/en.json
@@ -5,7 +5,8 @@
         "contact": "Contact Us",
         "services": "Dolares",
         "howItWorks": "Reales",
-        "contactUs": "Contact Us"
+        "contactUs": "Contact Us",
+        "blog": "Blog"
     },
     "header": {
         "email": "Email",
