--- a/locales/pt.json
+++ b/locales/pt.json
@@ -5,7 +5,8 @@
         "contact": "Contate-Nos",
         "services": "Dolares",
         "howItWorks": "Reais",
-        "contactUs": "Contate-Nos"
+        "contactUs": "Contate-Nos",
+        "blog": "Blog"
     },
     "header": {
         "email": "E-mail",
