--- a/locales/es.json
+++ b/locales/es.json
@@ -83,7 +83,7 @@
         "testimonial3": {
             "title": "Me gusto el servio",
             "text": "Empresa de confianza, ya he hecho 2 transferencias sin problemas... y te dice el detalle de la tarifa y cuánto recibirás. recomendar",
-            "author": "Felipe santos",
+            "author": "Felipe",
             "designation": "Brasil"
         },
         "testimonial4": {
