--- a/locales/es.json
+++ b/locales/es.json
@@ -71,7 +71,7 @@
         "testimonial1": {
             "title": "Excelente trabajo",
             "text": "Me brindaron un servicio impecable y maravilloso, muchas gracias Brasper, seguiré realizando mis transferencias con ustedes, me brindaron mucho apoyo y rapidez.",
-            "author": "Andrew D. Bricker",
+            "author": "Andrew",
             "designation": "Peru"
         },
         "testimonial2": {
@@ -89,26 +89,26 @@
         "testimonial4": {
             "title": "El mejor servio",
             "text": "Un buen servicio y el envió es rápido.",
-            "author": "Martha Felix Patiño",
+            "author": "Martha",
             "designation": "Peru"
         },
         "testimonial5": {
             "title": "La mejor experiencia",
             "text": "Buen servicio transferencia al instante",
-            "author": "Rosmary Rebaza Peñafiel",
+            "author": "Rosmary",
             "designation": "Peru"
         },
         "testimonial6": {
             "title": "Servicio impecable y rapido",
             "text": "Buen servicio!! recomiendo bastante 👍",
-            "author": "Darwin Ttito",
+            "author": "Darwin",
             "designation": "Peru"
         }
     },
     "aboutSection": {
         "subTitle": "Acerca de la empresa",
         "title": "Conecta tu Mundo, Maximiza tu Valor",
-        "description": "En un mundo globalizado y cada vez más conectado, realizar transferencias internacionales y cambios de moneda de manera eficiente, segura y con tasas competitivas es esencial para individuos y empresas por igual. En Braper Transferencias, nos especializamos en ofrecer un servicio de cambio de divisas y transferencias internacionales que se destaca por su transparencia, confiabilidad y atención personalizada. Nuestra misión es hacer que cada transacción sea sencilla y libre de preocupaciones, para que puedas enfocarte en lo que realmente importa.",
+        "description": "En un mundo globalizado y cada vez más conectado, realizar transferencias internacionales y cambios de moneda de manera eficiente, segura y con tasas competitivas es esencial para individuos y empresas por igual. En Brasper Transferencias, nos especializamos en ofrecer un servicio de cambio de divisas y transferencias internacionales que se destaca por su transparencia, confiabilidad y atención personalizada. Nuestra misión es hacer que cada transacción sea sencilla y libre de preocupaciones, para que puedas enfocarte en lo que realmente importa.",
         "viewMoreButton": "Ver más",
         "contactUs": "Comunícate con nosotros",
         "bestChoice": {
