--- a/locales/es.json
+++ b/locales/es.json
@@ -159,8 +159,6 @@
     },
     "calculadora": {
         "Titulo": "Ingrese el Monto a Enviar o Recibir",
-        "Comisión": "Comisión",
-        "Impuestos": "Impuestos",
         "Total": "Total a Enviar",
         "Tipo": "Tipo de Cambio",
         "Recibe": "Recibe",
@@ -170,10 +168,15 @@
         "Debe aceptar la Política de Privacidad": "Debe aceptar la Política de Privacidad y los Términos y Condiciones para continuar.",
         "Ingrese los montos": "Por favor, ingrese los montos a enviar y recibir antes de continuar.",
         "Corrija los errores": "Por favor, corrija los errores antes de continuar.",
+        "Excelente, su cotización Brasper para su envío de hoy es la siguiente:": "Excelente, su cotización Brasper para su envío de hoy es la siguiente:",
         "Monto a Enviar": "Monto a Enviar",
         "Tipo de Cambio": "Tipo de Cambio",
+        "Comisión": "Comisión",
+        "Impuestos": "Impuestos",
         "Neto a convertir": "Neto a convertir",
-        "Total a Recibir": "Total a Recibir"
+        "Total a Recibir": "Total a Recibir",
+        "Resumen: Para su envío de":"Resumen: Para su envío de",
+        ", recibirá directo en su cuenta de destino":", recibirá directo en su cuenta de destino"
     },
     "Bancos": {
         "Bancos": "Bancos",
