--- a/locales/pt.json
+++ b/locales/pt.json
@@ -159,8 +159,6 @@
     },
     "calculadora": {
         "Titulo": "Insira o valor a enviar ou receber",
-        "Comisión": "Comissão",
-        "Impuestos": "Impostos",
         "Total": "Total a Enviar",
         "Tipo": "Taxa de Câmbio",
         "Recibe": "Recebe",
@@ -170,10 +168,15 @@
         "Debe aceptar la Política de Privacidad": "Você deve aceitar a Política de Privacidade e os Termos e Condições para continuar.",
         "Ingrese los montos": "Por favor, insira os valores a enviar e receber antes de continuar.",
         "Corrija los errores": "Por favor, corrija os erros antes de continuar.",
+        "Excelente, su cotización Brasper para su envío de hoy es la siguiente:": "Perfeito, os detalhes para seu envio Brasper de hoje é a seguente:",
         "Monto a Enviar": "Valor a Enviar",
         "Tipo de Cambio": "Taxa de câmbio",
+        "Comisión": "Custo de envio:",
+        "Impuestos": "Impostos",
         "Neto a convertir": "Valor líquido a converter",
-        "Total a Recibir": "Total a receber"
+        "Total a Recibir": "Total a receber",
+        "Resumen: Para su envío de":"Resumo: Para o seu envio de",
+        ", recibirá directo en su cuenta de destino":", chegará direto na sua conta de destino"
     },
     "Bancos": {
         "Bancos": "Bancos",
