--- a/locales/pt.json
+++ b/locales/pt.json
@@ -175,7 +175,8 @@
         "Impuestos": "Impostos",
         "Neto a convertir": "Valor líquido a converter",
         "Total a Recibir": "Total a receber",
-        "Resumen: Para su envío de":"Resumo: Para o seu envio de",
+        "Resumen:":"Resumo:",
+        "Para su envío de":"Para o seu envio de",
         ", recibirá directo en su cuenta de destino":", chegará direto na sua conta de destino"
     },
     "Bancos": {
