--- a/locales/pt.json
+++ b/locales/pt.json
@@ -173,7 +173,7 @@
         "Tipo de Cambio": "Taxa de câmbio",
         "Comisión": "Custo de envio:",
         "Impuestos": "Impostos",
-        "Neto a convertir": "Valor líquido a converter",
+        "Neto a convertir": "Neto por converter",
         "Total a Recibir": "Total a receber",
         "Resumen:":"Resumo:",
         "Para su envío de":"Para o seu envio de",
