cambios de diseño

--- a/locales/es.json
+++ b/locales/es.json
@@ -22,7 +22,7 @@
         "description": "Ofrecemos servicios excelentes."
     },
     "heroSection": {
-        "title": "Brasper transferencias",
+        "title": "Brasper Transferencias",
         "description": "Envíos de Soles, Dólares, y Reales a Brasil y Perú al mejor tipo de cambio y con una tarifa premium para sus envíos!",
         "buttonText": "Invita aquí"
     },
