--- a/locales/pt.json
+++ b/locales/pt.json
@@ -22,7 +22,7 @@
         "description": "Oferecemos serviços excelentes."
     },
     "heroSection": {
-        "title": "Transferências Brasper",
+        "title": "Brasper Transferências",
         "description": "Envie Soles, Dólares e Reais para o Brasil e Peru com a melhor taxa de câmbio e com uma tarifa premium para suas transferências!",
         "buttonText": "Convide aqui"
     },
