--- a/locales/en.json
+++ b/locales/en.json
@@ -160,7 +160,7 @@
     "calculadora": {
         "EnviarP": "Send",
         "RecibirP": "Receive",
-        "Titulo": "Enter the Amount to Send or Receive",
+        "Titulo": "Enter the Amount to calculate",
         "Total": "Total to Send",
         "Tipo": "Exchange Rate",
         "Recibe": "Receives",
